infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: morpi-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: morpi.bastian-somon.fr
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: morpi-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: morpi-frontend
                port:
                  number: 80
